--- a/www/index.html
+++ b/www/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <!-- ✅ Bloodmoney favicon and Apple touch icon -->
-    <link rel="icon" href="https://bloodmoneygame.github.io/cache/data/image/game/blood-money/blood-money-m186x186.webp" type="image/webp">
-    <link rel="apple-touch-icon" href="https://bloodmoneygame.github.io/cache/data/image/game/blood-money/blood-money-m186x186.webp">
+  <!-- ✅ Circular favicon and Apple touch icon -->
+  <link rel="icon" href="https://0f0g5trojctvflvy.public.blob.vercel-storage.com/circle-image.png" type="image/png">
+  <link rel="apple-touch-icon" href="https://0f0g5trojctvflvy.public.blob.vercel-storage.com/circle-image.png">
 
-    <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-    <title>BLOODMONEY!</title>
+  <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
+  <title>BLOODMONEY!</title>
 </head>
 <body style="background-color: black">
-    <script type="text/javascript" src="js/libs/pixi.js"></script>
-    <script type="text/javascript" src="js/libs/pixi-tilemap.js"></script>
-    <script type="text/javascript" src="js/libs/pixi-picture.js"></script>
-    <script type="text/javascript" src="js/libs/fpsmeter.js"></script>
-    <script type="text/javascript" src="js/libs/lz-string.js"></script>
-    <script type="text/javascript" src="js/libs/iphone-inline-video.browser.js"></script>
-    <script type="text/javascript" src="js/rpg_core.js"></script>
-    <script type="text/javascript" src="js/rpg_managers.js"></script>
-    <script type="text/javascript" src="js/rpg_objects.js"></script>
-    <script type="text/javascript" src="js/rpg_scenes.js"></script>
-    <script type="text/javascript" src="js/rpg_sprites.js"></script>
-    <script type="text/javascript" src="js/rpg_windows.js"></script>
-    <script type="text/javascript" src="js/plugins.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/libs/pixi.js"></script>
+  <script type="text/javascript" src="js/libs/pixi-tilemap.js"></script>
+  <script type="text/javascript" src="js/libs/pixi-picture.js"></script>
+  <script type="text/javascript" src="js/libs/fpsmeter.js"></script>
+  <script type="text/javascript" src="js/libs/lz-string.js"></script>
+  <script type="text/javascript" src="js/libs/iphone-inline-video.browser.js"></script>
+  <script type="text/javascript" src="js/rpg_core.js"></script>
+  <script type="text/javascript" src="js/rpg_managers.js"></script>
+  <script type="text/javascript" src="js/rpg_objects.js"></script>
+  <script type="text/javascript" src="js/rpg_scenes.js"></script>
+  <script type="text/javascript" src="js/rpg_sprites.js"></script>
+  <script type="text/javascript" src="js/rpg_windows.js"></script>
+  <script type="text/javascript" src="js/plugins.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
